--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ag-grid-react": "^21.0.1",
     "bootstrap": "^4.3.1",
     "faker": "^4.1.0",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "holderjs": "^2.9.6",
     "isomorphic-fetch": "^3.0.0",
